# Playground

./: .gitmodules  =4.2.1  tmp  tmp.sh
.tmp_codeql_struts11776_pack/: 09_dataflow_modernized.ql  codeql-pack.lock.yml  min_call_test.ql  min_java_test.ql  qlpack.yml  qlpacks.json
Skills/project-background-skill-creator/: README.md  project_skill_creator.md  project_skill_updater.md  tech-learning-based-skill-creation.md
Skills/prompt-creator/: README.md  通用模板.md
Skills/skill-creator/: SKILL.md
Skills/skill-creator/agents/: openai.yaml
Skills/skill-creator/eval-viewer/: viewer.html
Skills/skill-creator/references/: openai_yaml.md  schemas.md
Skills/skill-creator/scripts/: aggregate_benchmark.py  codex_runner.py  generate_openai_yaml.py  improve_description.py  init_skill.py  package_skill.py  quick_validate.py  run_eval.py  run_loop.py  run_task_eval.py  utils.py
Skills/tech-learning/: CODEX_SKILL.md  general_skill.md
Skills/tech-learning/workspace/bandit-learning/bandit_workspace/canonical_target_rule/: README.md  bandit.yaml  pyproject.toml  rule_manifest.json
Skills/tech-learning/workspace/bandit-learning/bandit_workspace/canonical_target_rule/.bandit-target-venv/: pyvenv.cfg
Skills/tech-learning/workspace/bandit-learning/bandit_workspace/canonical_target_rule/src/canonical_bandit_target_rule/: __init__.py  plugin.py
Skills/web-search/: README.md
Tech-Learning/CodeQL/: codeql-java-top-inheritance-tree.md
docs/: tmp
docs/plans/: 2026-03-21-github-ctf4-design.md  2026-03-31-alibaba-dsl-notes-refresh.md
(+1099 files in other folders)
